<resources>
    <string name="app_name">Assignment_1 App</string>
    <string name="android">Android</string>
    <string name="web">Web</string>
    <string name="ml">ML</string>
    <string name="hacking">Hacking</string>
    <string name="contact_us">Contact Us</string>
    <string name="welcome_to_vivek_knowledge_hub">Welcome to Vivek Knowledge Hub</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="android_operating_system_is_the_largest_installed_base_among_various_mobile_platforms_across_the_globe_hundreds_of_millions_of_mobile_devices_are_powered_by_android_in_more_than_190_countries_of_the_world_it_conquered_around_71_of_the_global_market_share_by_the_end_of_2021_and_this_trend_is_growing_bigger_every_other_day_the_company_named_open_handset_alliance_developed_android_for_the_first_time_that_is_based_on_the_modified_version_of_the_linux_kernel_and_other_open_source_software_google_sponsored_the_project_at_initial_stages_and_in_the_year_2005_it_acquired_the_whole_company_in_september_2008_the_first_android_powered_device_was_launched_in_the_market_android_dominates_the_mobile_os_industry_because_of_the_long_list_of_features_it_provides_it_s_user_friendly_has_huge_community_support_provides_a_greater_extent_of_customization_and_a_large_number_of_companies_build_android_compatible_smartphones_as_a_result_the_market_observes_a_sharp_increase_in_the_demand_for_developing_android_mobile_applications_and_with_that_companies_need_smart_developers_with_the_right_skill_set_at_first_the_purpose_of_android_was_thought_of_as_a_mobile_operating_system_however_with_the_advancement_of_code_libraries_and_its_popularity_among_developers_of_the_divergent_domain_android_becomes_an_absolute_set_of_software_for_all_devices_like_tablets_wearables_set_top_boxes_smart_tvs_notebooks_etc_android_open_source_project_so_we_can_customize_the_os_based_on_our_requirements_android_supports_different_types_of_connectivity_for_gsm_cdma_wi_fi_bluetooth_etc_for_telephonic_conversation_or_data_transfer_using_wifi_technology_we_can_pair_with_other_devices_while_playing_games_or_using_other_applications_it_contains_multiple_apis_to_support_location_tracking_services_such_as_gps_we_can_manage_all_data_storage_related_activities_by_using_the_file_manager_it_contains_a_wide_range_of_media_supports_like_avi_mkv_flv_mpeg4_etc_to_play_or_record_a_variety_of_audio_video_it_also_supports_different_image_formats_like_jpeg_png_gif_bmp_mp3_etc_it_supports_multimedia_hardware_control_to_perform_playback_or_recording_using_a_camera_and_microphone_android_has_an_integrated_open_source_webkit_layout_based_web_browser_to_support_user_interfaces_like_html5_and_css3_android_supports_multi_tasking_means_we_can_run_multiple_applications_at_a_time_and_can_switch_between_them_it_provides_support_for_virtual_reality_or_2d_3d_graphics_advantages_of_android_development_the_android_is_an_open_source_operating_system_and_hence_possesses_a_vast_community_for_support_the_design_of_the_android_application_has_guidelines_from_google_which_becomes_easier_for_developers_to_produce_more_intuitive_user_applications_fragmentation_gives_more_power_to_android_applications_this_means_the_application_can_run_two_activities_on_a_single_screen_releasing_the_android_application_in_the_google_play_store_is_easier_when_it_is_compared_to_other_platforms_disadvantages_of_android_development_fragmentation_provides_a_very_intuitive_approach_to_user_experience_but_it_has_some_drawbacks_where_the_development_team_needs_time_to_adjust_to_the_various_screen_sizes_of_mobile_smartphones_that_are_now_available_in_the_market_and_invoke_the_particular_features_in_the_application_the_android_devices_might_vary_broadly_so_the_testing_of_the_application_becomes_more_difficult_as_the_development_and_testing_consume_more_time_the_cost_of_the_application_may_increase_depending_on_the_application_s_complexity_and_features">Android operating system is the largest installed base among various mobile platforms across the globe. Hundreds of millions of mobile devices are powered by Android in more than 190 countries of the world. It conquered around 71% of the global market share by the end of 2021, and this trend is growing bigger every other day. The company named Open Handset Alliance developed Android for the first time that is based on the modified version of the Linux kernel and other open-source software. Google sponsored the project at initial stages and in the year 2005, it acquired the whole company. In September 2008, the first Android-powered device was launched in the market. Android dominates the mobile OS industry because of the long list of features it provides. It’s user-friendly, has huge community support, provides a greater extent of customization, and a large number of companies build Android-compatible smartphones. As a result, the market observes a sharp increase in the demand for developing Android mobile applications, and with that companies need smart developers with the right skill set. At first, the purpose of Android was thought of as a mobile operating system. However, with the advancement of code libraries and its popularity among developers of the divergent domain, Android becomes an absolute set of software for all devices like tablets, wearables, set-top boxes, smart TVs, notebooks, etc.Android Open Source Project so we can customize the OS based on our requirements. Android supports different types of connectivity for GSM, CDMA, Wi-Fi, Bluetooth, etc. for telephonic conversation or data transfer. Using wifi technology we can pair with other devices while playing games or using other applications. It contains multiple APIs to support location-tracking services such as GPS. We can manage all data storage-related activities by using the file manager. It contains a wide range of media supports like AVI, MKV, FLV, MPEG4, etc. to play or record a variety of audio/video. It also supports different image formats like JPEG, PNG, GIF, BMP, MP3, etc. It supports multimedia hardware control to perform playback or recording using a camera and microphone. Android has an integrated open-source WebKit layout-based web browser to support User Interfaces like HTML5, and CSS3. Android supports multi-tasking means we can run multiple applications at a time and can switch between them. It provides support for virtual reality or 2D/3D Graphics.Advantages of Android Development The Android is an open-source Operating system and hence possesses a vast community for support. The design of the Android Application has guidelines from Google, which becomes easier for developers to produce more intuitive user applications. Fragmentation gives more power to Android Applications. This means the application can run two activities on a single screen. Releasing the Android application in the Google play store is easier when it is compared to other platforms. Disadvantages of Android Development Fragmentation provides a very intuitive approach to user experience but it has some drawbacks, where the development team needs time to adjust to the various screen sizes of mobile smartphones that are now available in the market and invoke the particular features in the application. The Android devices might vary broadly. So the testing of the application becomes more difficult. As the development and testing consume more time, the cost of the application may increase, depending on the application’s complexity and features.</string>
</resources>