<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardWeb"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:backgroundTint="@color/green"
        android:layout_margin="30dp"
        android:layout_gravity="center">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/android" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardWeb2"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:backgroundTint="@color/green"
        android:layout_margin="20dp"
        android:layout_gravity="center">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/web" />

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardWeb3"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:backgroundTint="@color/green"
        android:layout_margin="20dp"
        android:layout_gravity="center">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/ml" />

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardWeb4"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:backgroundTint="@color/green"
        android:layout_margin="20dp"
        android:layout_gravity="center">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/hacking" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        android:layout_gravity="center"
        android:text="@string/contact_us" />


</LinearLayout>